--- a/style.css
+++ b/style.css
@@ -8,15 +8,16 @@ body {
     margin: auto;
     background-color: #fff;
     
-    border: 2px solid #c299db;
-    box-shadow: 4px 4px #d699d6;
-    
+    border: 2px solid #ff66cc;
 }
 
 .top-bar {
     height: 50px;
     background-color: #c299db;
     border-bottom: 2px solid black;
+    
+    padding-top: 7px;
+    padding-left: 5px;
 }
 
 .fld-search {
