--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body {
     background-color: #9999e6;
 }
 
+#load_overlay {
+    position: absolute;
+    display: block;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0,0,0,0.5);
+}
+
 .content {
     width: 100%;
     max-width: 1000px;
